test/expected/prepass_assign_selfref.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$VAR"]
[Word
  Unquoted "VAR=1"
]
[Word
  Unquoted "echo"
]
[Word
  Variable "VAR"
]
shit: 2:12: warning: The assignment prefix does not affect this command, 'VAR' is read before it is set.
     2 |  VAR=1 echo $VAR
       |             ^~~~ here.
shit: 2:12: error: Unable to expand 'VAR' because the parameter is not set.
     2 |  VAR=1 echo $VAR
       |             ^~~~ here.
